<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_settings_title_1" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="PromoNotificationOnOff"
            android:summary="@string/preference_settings_summary_1_1"
            android:title="@string/preference_settings_text_1_1" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="PromoNotificationOnOff"
            android:summary="@string/preference_settings_summary_1_2"
            android:title="@string/preference_settings_text_1_2"
            android:enabled="false" />
        
        <SwitchPreference
            android:defaultValue="true"
            android:key="PromoNotificationOnOff"
            android:summary="@string/preference_settings_summary_1_3"
            android:title="@string/preference_settings_text_1_3"
            android:enabled="false" />
        
        <SwitchPreference
            android:defaultValue="true"
            android:key="PromoNotificationOnOff"
            android:summary="@string/preference_settings_summary_1_4"
            android:title="@string/preference_settings_text_1_4"
            android:enabled="false" />
        
        <SwitchPreference
            android:defaultValue="true"
            android:key="PromoNotificationOnOff"
            android:title="@string/preference_settings_text_1_5"
            android:enabled="false" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_settings_title_2" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="PromoNotificationOnOff"
            android:summary="@string/preference_settings_summary_2_1"
            android:title="@string/preference_settings_text_2_1" />
    </PreferenceCategory>
</PreferenceScreen>