<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="0.65"
        android:numColumns="4"
        android:background="#F2F2F2" >
    </GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#FFFFFF" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/application_button_1"
            android:textColor="@color/black_color"
            android:textSize="12dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.21"
            android:background="#55B1F2"
            android:padding="20dp"
            android:text="@string/application_button_2"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/application_button_3"
            android:textColor="@color/black_color"
            android:textSize="12dp"
			style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>